Fixed spacing issue

--- a/react-blog/src/Projects.css
+++ b/react-blog/src/Projects.css
@@ -6,7 +6,7 @@
 
 #project-card {
     height: 500px;
-    width: 22rem;
+    width: 21rem;
     display: block;
     top: 0px;
     position: relative;
